--- a/LeetCode/2001-2010/2003. 每棵子树内缺失的最小基因值（困难）.md
+++ b/LeetCode/2001-2010/2003. 每棵子树内缺失的最小基因值（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[2003. 每棵子树内缺失的最小基因值](https://leetcode.cn/problems/smallest-missing-genetic-value-in-each-subtree/solutions/2505877/gong-shui-san-xie-tu-jie-san-da-jie-lun-mxjrn/)** ，难度为 **困难**。
 
-Tag : 「DFS」、「树」、「图」、「脑筋急转弯」
+Tag : 「DFS」、「图」、「脑筋急转弯」
 
 
 
