--- a/LeetCode/2121-2130/2127. 参加会议的最多员工数（困难）.md
+++ b/LeetCode/2121-2130/2127. 参加会议的最多员工数（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[2127. 参加会议的最多员工数](https://leetcode.cn/problems/maximum-employees-to-be-invited-to-a-meeting/solutions/2507559/gong-shui-san-xie-sha-shi-nei-xiang-wai-4ig79/)** ，难度为 **困难**。
 
-Tag : 「拓扑排序」、「内向基环树」、「图」
+Tag : 「基环森林」、「内向基环树」、「拓扑排序」、「图」
 
 
 
@@ -63,7 +63,7 @@ Tag : 「拓扑排序」、「内向基环树」、「图」
 
 ---
 
-### 内向基环树 + 拓扑排序
+### 内向基环森林 + 拓扑排序
 
 根据题意，圆形桌上 $x$ 左右两边只要有一位是 $x$ 所喜欢即可。
 
