--- a/LeetCode/421-430/421. 数组中两个数的最大异或值（中等）.md
+++ b/LeetCode/421-430/421. 数组中两个数的最大异或值（中等）.md
@@ -44,7 +44,7 @@ Tag : 「字典树」、「贪心」
 ```
 
 提示：
-* $1 <= nums.length <= 2 \times 10^4$
+* $1 <= nums.length <= 2 \times 10^5$
 * $0 <= nums[i] <= 2^{31} - 1$
 
 ---
@@ -89,39 +89,35 @@ Tag : 「字典树」、「贪心」
 
 担心有不熟 Java 的同学，在代码里添加了相应注释说明。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     // static 成员整个类独一份，只有在类首次加载时才会创建，因此只会被 new 一次
-    static int N = (int)1e6;
-    static int[][] trie = new int[N][2];
-    static int idx = 0;
+    static int N = (int)2e5 * 31, idx = 0;
+    static int[][] tr = new int[N][2];
     // 每跑一个数据，会被实例化一次，每次实例化的时候被调用，做清理工作
     public Solution() {
-        for (int i = 0; i <= idx; i++) {
-            Arrays.fill(trie[i], 0);
-        }
+        for (int i = 0; i <= idx; i++) Arrays.fill(tr[i], 0);
         idx = 0;
     }
     void add(int x) {
         int p = 0;
         for (int i = 31; i >= 0; i--) {
             int u = (x >> i) & 1;
-            if (trie[p][u] == 0) trie[p][u] = ++idx;
-            p = trie[p][u];
+            if (tr[p][u] == 0) tr[p][u] = ++idx;
+            p = tr[p][u];
         }
     }
     int getVal(int x) {
-        int ans = 0;
-        int p = 0;
+        int p = 0, ans = 0;
         for (int i = 31; i >= 0; i--) {
             int a = (x >> i) & 1, b = 1 - a;
-            if (trie[p][b] != 0) {
+            if (tr[p][b] != 0) {
                 ans |= (b << i);
-                p = trie[p][b];
+                p = tr[p][b];
             } else {
                 ans |= (a << i);
-                p = trie[p][a];
+                p = tr[p][a];
             }
         }
         return ans;
@@ -137,8 +133,89 @@ class Solution {
     }
 }
 ```
+Python 代码：
+```Python
+class Solution:
+    def findMaximumXOR(self, nums: List[int]) -> int:
+        N, idx = (len(nums) + 1) * 31, 0
+        tr = [[0, 0] for _ in range(N)]
+        def add(x):
+            nonlocal idx
+            p = 0
+            for i in range(31, -1, -1):
+                u = (x >> i) & 1
+                if tr[p][u] == 0:
+                    idx += 1
+                    tr[p][u] = idx
+                p = tr[p][u]
+        def getVal(x):
+            p, ans = 0, 0
+            for i in range(31, -1, -1):
+                a = (x >> i) & 1
+                b = 1 - a
+                if tr[p][b] != 0:
+                    ans |= (b << i)
+                    p = tr[p][b]
+                else:
+                    ans |= (a << i)
+                    p = tr[p][a]
+            return ans
+        ans = 0
+        for i in nums:
+            add(i)
+            j = getVal(i)
+            ans = max(ans, i ^ j)
+        return ans
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    static const int N = 2e5 * 31;
+    int idx = 0;
+    int tr[N][2] = {0};
+    Solution() {
+        for (int i = 0; i <= idx; i++) tr[i][0] = tr[i][1] = 0;
+        idx = 0;
+    }
+    void add(int x) {
+        int p = 0;
+        for (int i = 31; i >= 0; i--) {
+            int u = (x >> i) & 1;
+            if (tr[p][u] == 0) {
+                tr[p][u] = ++idx;
+            }
+            p = tr[p][u];
+        }
+    }
+    int getVal(int x) {
+        int p = 0, ans = 0;
+        for (int i = 31; i >= 0; i--) {
+            int a = (x >> i) & 1;
+            int b = 1 - a;
+            if (tr[p][b] != 0) {
+                ans |= (b << i);
+                p = tr[p][b];
+            } else {
+                ans |= (a << i);
+                p = tr[p][a];
+            }
+        }
+        return ans;
+    }
+    int findMaximumXOR(vector<int>& nums) {
+        int ans = 0;
+        for (int i : nums) {
+            add(i);
+            int j = getVal(i);
+            ans = max(ans, i ^ j);
+        }
+        return ans;
+    }
+};
+```
 * 时间复杂度：$O(n)$
-* 空间复杂度：$O(1e6)$
+* 空间复杂度：$O(C)$
 
 ---
 
@@ -146,7 +223,7 @@ class Solution {
 
 相比于使用 `static` 来优化，一个更好的做法是使用类来实现 $Trie$，这样可以真正做到「按需分配」内存，缺点是会发生不确定次数的 `new`。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     class Node {
@@ -186,6 +263,54 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    class Node {
+    public:
+        Node* ns[2];
+        Node() {
+            ns[0] = nullptr;
+            ns[1] = nullptr;
+        }
+    };
+    Node* root = new Node();
+    void add(int x) {
+        Node* p = root;
+        for (int i = 31; i >= 0; i--) {
+            int u = (x >> i) & 1;
+            if (!p->ns[u]) p->ns[u] = new Node();
+            p = p->ns[u];
+        }
+    }
+    int getVal(int x) {
+        int ans = 0;
+        Node* p = root;
+        for (int i = 31; i >= 0; i--) {
+            int a = (x >> i) & 1, b = 1 - a;
+            if (p->ns[b]) {
+                ans |= (b << i);
+                p = p->ns[b];
+            } else {
+                ans |= (a << i);
+                p = p->ns[a];
+            }
+        }
+        return ans;
+    }
+    int findMaximumXOR(vector<int>& nums) {
+        int ans = 0;
+        for (int i : nums) {
+            add(i);
+            int j = getVal(i);
+            ans = max(ans, i ^ j);
+        }
+        return ans;
+    }
+};
+
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
