--- a/LeetCode/1751-1760/1760. 袋子里最少数目的球（中等）.md
+++ b/LeetCode/1751-1760/1760. 袋子里最少数目的球（中等）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[1760. 袋子里最少数目的球](https://acoier.com/2022/12/26/1760.%20%E8%A2%8B%E5%AD%90%E9%87%8C%E6%9C%80%E5%B0%91%E6%95%B0%E7%9B%AE%E7%9A%84%E7%90%83%EF%BC%88%E4%B8%AD%E7%AD%89%EF%BC%89/)** ，难度为 **中等**。
+这是 LeetCode 上的 **[1760. 袋子里最少数目的球](https://leetcode.cn/problems/minimum-limit-of-balls-in-a-bag/solutions/2519994/gong-shui-san-xie-jing-dian-er-fen-yun-y-pj6r/)** ，难度为 **中等**。
 
 Tag : 「二分」
 
