--- a/Index/树状数组.md
+++ b/Index/树状数组.md
@@ -11,4 +11,5 @@
 | [1310. 子数组异或查询](https://leetcode-cn.com/problems/xor-queries-of-a-subarray/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/xor-queries-of-a-subarray/solution/gong-shui-san-xie-yi-ti-shuang-jie-shu-z-rcgu/) | 中等 | 🤩🤩🤩🤩     |
 | [1395. 统计作战单位数](https://leetcode.cn/problems/count-number-of-teams/) | [LeetCode 题解链接](https://leetcode.cn/problems/count-number-of-teams/solution/by-ac_oier-qm3a/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [1893. 检查是否区域内所有整数都被覆盖](https://leetcode-cn.com/problems/check-if-all-the-integers-in-a-range-are-covered/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/check-if-all-the-integers-in-a-range-are-covered/solution/gong-shui-san-xie-yi-ti-shuang-jie-mo-ni-j83x/) | 简单 | 🤩🤩🤩🤩     |
+| [2736. 最大和查询](https://leetcode.cn/problems/maximum-sum-queries/) | [LeetCode 题解链接](https://leetcode.cn/problems/maximum-sum-queries/solutions/2530269/gong-shui-san-xie-cong-yi-wei-xian-zhi-d-ww8r/) | 困难 | 🤩🤩🤩🤩🤩    |
 
