--- a/LeetCode/301-310/303. 区域和检索 - 数组不可变（简单）.md
+++ b/LeetCode/301-310/303. 区域和检索 - 数组不可变（简单）.md
@@ -6,11 +6,11 @@ Tag : 「前缀和」、「区间求和问题」
 
 
 
-给定一个整数数组  nums，求出数组从索引 i 到 j（i ≤ j）范围内元素的总和，包含 i、j 两点。
+给定一个整数数组 `nums`，求出数组从索引 `i` 到 `j`（`i ≤ j`）范围内元素的总和，包含 `i`、`j` 两点。
 
-实现 NumArray 类：
-* NumArray(int[] nums) 使用数组 nums 初始化对象
-* int sumRange(int i, int j) 返回数组 nums 从索引 i 到 j（i ≤ j）范围内元素的总和，包含 i、j 两点（也就是 sum(nums[i], nums[i + 1], ... , nums[j])）
+实现 `NumArray` 类：
+* `NumArray(int[] nums)` 使用数组 `nums` 初始化对象
+* `int sumRange(int i, int j)` 返回数组 `nums` 从索引 `i` 到 `j`（`i ≤ j`）范围内元素的总和，包含 i、j 两点（也就是 `sum(nums[i], nums[i + 1], ... , nums[j])`）
 
 
 示例：
@@ -29,31 +29,34 @@ numArray.sumRange(0, 5); // return -3 ((-2) + 0 + 3 + (-5) + 2 + (-1))
 ```
 
 提示：
-* 0 <= nums.length <= $10^4$
-* -$10^5$ <= nums[i] <= $10^5$
-* 0 <= i <= j < nums.length
-* 最多调用 $10^4# 次 sumRange 方法
+* $0 <= nums.length <= 10^4$
+* $-10^5 <= nums[i] <= 10^5$
+* $0 <= i <= j < nums.length$
+* 最多调用 $10^4$ 次 `sumRange` 方法
 
 
 ---
 
-### 前缀和解法（一维）
+### 前缀和（一维）
 
-这是一道前缀和的裸题。
+这是一道前缀和裸题。
 
-当需要我们求「某一段」区域的和的时候，我们要很自然的想到「前缀和」。
+当要我们求「连续段」区域和的时候，要很自然的想到「前缀和」。
 
-前缀和的作用就是为了帮助我们快速求某一段的和，是「差分」的逆运算。
+所谓前缀和，是指对原数组“累计和”的描述，通常是指一个与原数组等长的数组。
 
-**前缀和数组 `sum` 的每一位记录的是当前位置距离起点位置，这连续一段的和区间和。**
+设前缀和数组为 `sum`，**`sum` 的每一位记录的是从「起始位置」到「当前位置」的元素和**。例如 $sum[x]$ 是指原数组中“起始位置”到“位置 `x`”这一连续段的元素和。
 
-因此当我们要求特定的一段 [i,j] 的区域和的时候，可以直接利用前缀和数组快速求解：`ans = sum[j] - sum[i - 1]`。
+有了前缀和数组 `sum`，当我们求连续段 $[i, j]$ 的区域和时，利用「容斥原理」，便可进行快速求解。
+
+通用公式：`ans = sum[j] - sum[i - 1]`。
 
 ![image.png](https://pic.leetcode-cn.com/1614563503-eNCXNU-image.png)
 
-由于涉及 -1 操作，为了减少一些边界处理，我们可以使前缀和数组下标从 1 开始记录，然后在进行答案计算的时候，根据源数组下标是否从 1 开始决定是否产生相应的偏移：
+由于涉及 `-1` 操作，为减少边界处理，我们可让前缀和数组下标从 $1$ 开始。在进行快速求和时，再根据原数组下标是否从 $1$ 开始，决定是否进行相应的下标偏移。
 
-```java
+Java 代码：
+```Java
 class NumArray {
     int[] sum;
     public NumArray(int[] nums) {
@@ -71,14 +74,70 @@ class NumArray {
     }
 }
 ```
+C++ 代码：
+```C++
+class NumArray {
+public:
+    vector<int> sum;
+    NumArray(std::vector<int>& nums) {
+        int n = nums.size();
+        // 前缀和数组下标从 1 开始，因此设定长度为 n + 1（模板部分）
+        sum.resize(n + 1, 0);
+        // 预处理除前缀和数组（模板部分）
+        for (int i = 1; i <= n; i++) sum[i] = sum[i - 1] + nums[i - 1];
+    }
+    int sumRange(int i, int j) {
+        // 求某一段区域和 [i, j] 的模板是 sum[j] - sum[i - 1]（模板部分）
+        // 但由于我们源数组下标从 0 开始，因此要在模板的基础上进行 + 1
+        i++; j++;
+        return sum[j] - sum[i - 1];
+    }
+};
+```
+Python 代码：
+```Python
+class NumArray:
+    def __init__(self, nums: List[int]):
+        n = len(nums)
+        # 前缀和数组下标从 1 开始，因此设定长度为 n + 1（模板部分）
+        self.sum = [0] * (n + 1)
+        # 预处理除前缀和数组（模板部分）
+        for i in range(1, n + 1):
+            self.sum[i] = self.sum[i - 1] + nums[i - 1]
+
+    def sumRange(self, i: int, j: int) -> int:
+        # 求某一段区域和 [i, j] 的模板是 sum[j] - sum[i - 1]（模板部分）
+        # 但由于我们源数组下标从 0 开始，因此要在模板的基础上进行 + 1
+        i, j = i + 1, j + 1
+        return self.sum[j] - self.sum[i - 1]
+```
+TypeScript 代码：
+```TypeScript
+class NumArray {
+    private sum: number[];
+    constructor(nums: number[]) {
+        const n: number = nums.length;
+        // 前缀和数组下标从 1 开始，因此设定长度为 n + 1（模板部分）
+        this.sum = new Array(n + 1).fill(0);
+        // 预处理除前缀和数组（模板部分）
+        for (let i = 1; i <= n; i++) this.sum[i] = this.sum[i - 1] + nums[i - 1];
+    }
+    sumRange(i: number, j: number): number {
+        // 求某一段区域和 [i, j] 的模板是 sum[j] - sum[i - 1]（模板部分）
+        // 但由于我们源数组下标从 0 开始，因此要在模板的基础上进行 + 1
+        i++; j++;
+        return this.sum[j] - this.sum[i - 1];
+    }
+}
+```
 * 时间复杂度：预处理前缀和数组需要对原数组进行线性扫描，复杂度为 $O(n)$，计算结果复杂度为 $O(1)$。整体复杂度为 $O(n)$
 * 空间复杂度：$O(n)$
 
-***
+---
 
 ### 一维前缀和模板
 
-我们再来整理下一维「前缀和」的模板代码：
+我们再来整理下一维「前缀和」的模板代码（`Java` 为例）：
 
 ```java
 // 预处理前缀和数组
@@ -94,7 +153,7 @@ class NumArray {
 }
 ```
 
-***
+---
 
 ### 总结
 
