--- a/LeetCode/51-60/53. 最大子数组和（中等）.md
+++ b/LeetCode/51-60/53. 最大子数组和（中等）.md
@@ -164,7 +164,7 @@ Java 代码：
 
 ```Java
 class Solution {
-    // 返回值: [sum, max, lm, rm] = [区间和, 最大子数组和, 前缀最大值, 后缀最大值]
+    // 返回值: [sum, lm, rm, max] = [区间和, 前缀最大值, 后缀最大值, 最大子数组和]
     int[] dfs(int[] nums, int l, int r) {
         if (l == r) {
             int t = Math.max(nums[l], 0);
@@ -193,7 +193,7 @@ C++ 代码：
 ```C++
 class Solution {
 public:
-    // 返回值: [sum, max, lm, rm] = [区间和, 最大子数组和, 前缀最大值, 后缀最大值]
+    // 返回值: [sum, lm, rm, max] = [区间和, 前缀最大值, 后缀最大值, 最大子数组和]
     vector<int> dfs(vector<int>& nums, int l, int r) {
         if (l == r) {
             int t = max(nums[l], 0);
