--- a/LeetCode/1331-1340/1334. 阈值距离内邻居最少的城市（中等）.md
+++ b/LeetCode/1331-1340/1334. 阈值距离内邻居最少的城市（中等）.md
@@ -639,7 +639,7 @@ public:
         vector<bool> vis(n, false);
         dist[x] = 0;
         // 使用「优先队列」存储所有可用于更新的点
-        // 以 (点编号, 到起点的距离) 进行存储，优先弹出「最短距离」较小的点
+        // 以 (到起点的距离, 点编号) 进行存储，优先弹出「最短距离」较小的点
         priority_queue<pair<int, int>, vector<pair<int, int>>, greater<pair<int, int>>> q;
         q.push({0, x});
         while (!q.empty()) {
