--- a/LeetCode/1661-1670/1669. 合并两个链表（中等）.md
+++ b/LeetCode/1661-1670/1669. 合并两个链表（中等）.md
@@ -1,8 +1,8 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[1669. 合并两个链表](/)** ，难度为 **中等**。
+这是 LeetCode 上的 **[1669. 合并两个链表](https://leetcode.cn/problems/merge-in-between-linked-lists/solutions/2538688/gong-shui-san-xie-jian-dan-lian-biao-ti-4k20i/)** ，难度为 **中等**。
 
-Tag : 「链表」、「模拟」
+Tag : 「链表」
 
 
 
