--- a/LeetCode/2211-2220/2216. 美化数组的最少删除数（中等）.md
+++ b/LeetCode/2211-2220/2216. 美化数组的最少删除数（中等）.md
@@ -42,9 +42,9 @@ Tag : 「模拟」
 
 ### 模拟
 
-使用变量 `cnt` 代表已删除的元素个数，由于每次删除元素，剩余元素都会往前移动，因此当前下标为 $i - cnt$。
+使用变量 `cnt` 代表已删除的元素个数，由于每次删除元素，剩余元素都会往前移动，因此遍历过程中，当前下标为 $i - cnt$。
 
-处理 `nums` 过程中，若当前下标为偶数，且与下一位置元素相同，那么当前元素需被删除，令 `cnt` 自增。
+若当前下标为偶数，且与下一位置元素相同，那么当前元素需被删除，令 `cnt` 自增。
 
 最终数组长度为 $n - cnt$，若长度为奇数，需要再额外删除结尾元素（`cnt` 再加一），否则 `cnt` 即为答案。
 
