--- a/LeetCode/901-910/907. 子数组的最小值之和（中等）.md
+++ b/LeetCode/901-910/907. 子数组的最小值之和（中等）.md
@@ -35,8 +35,6 @@ Tag : 「数学」、「单调栈」
 
 ### 单调栈 + 数学
 
-> 原题解链接在 [这里](https://leetcode.cn/problems/sum-of-subarray-minimums/solution/by-ac_oier-h9cd/)，本次增加了更为详细的细节说明。
-
 原问题为求所有子数组的最小值之和。
 
 统计所有子数组需要枚举左右端点，复杂度为 $O(n^2)$，对于每个子数组，我们还需要通过线性扫描的方式找到其最小值，复杂度为 $O(n)$，因此朴素解法的整体复杂度为 $O(n^3)$，题目给定数据范围为 $3 \times 10^4$，会 `TLE`。
@@ -99,6 +97,38 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int MOD = 1e9 + 7;
+    int sumSubarrayMins(vector<int>& arr) {
+        int n = arr.size(), ans = 0;
+        vector<int> l(n, -1), r(n, n);
+        stack<int> d;
+        for (int i = 0; i < n; i++) {
+            while (!d.empty() && arr[d.top()] >= arr[i]) {
+                r[d.top()] = i;
+                d.pop();
+            }
+            d.push(i);
+        }
+        while (!d.empty()) d.pop();
+        for (int i = n - 1; i >= 0; i--) {
+            while (!d.empty() && arr[d.top()] > arr[i]) {
+                l[d.top()] = i;
+                d.pop();
+            }
+            d.push(i);
+        }
+        for (int i = 0; i < n; i++) {
+            long long a = i - l[i], b = r[i] - i;
+            ans = (ans + a * b % MOD * arr[i] % MOD) % MOD;
+        }
+        return ans;
+    }
+};
 ```
 TypeScript 代码：
 ```TypeScript
@@ -176,6 +206,29 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int MOD = 1e9 + 7;
+    int sumSubarrayMins(vector<int>& arr) {
+        int n = arr.size(), ans = 0;
+        deque<int> d;
+        for (int r = 0; r <= n; r++) {
+            int t = (r < n) ? arr[r] : 0;
+            while (!d.empty() && arr[d.back()] >= t) {
+                int cur = d.back();
+                d.pop_back();
+                int l = d.empty() ? -1 : d.back();
+                long long a = cur - l, b = r - cur;
+                ans = (ans + a * b % MOD * arr[cur] % MOD) % MOD;
+            }
+            d.push_back(r);
+        }
+        return ans;
+    }
+};
 ```
 TypeScript 代码：
 ```TypeScript
